# KohakuBench

./: README.md  pyproject.toml
docs/: README.md  architecture.md  cli.md  kobench-api.md  manual.md  metrics.md  modules.md  presets.md  recipes.md  reporting.md
examples/: README.md  attention_bench.py  conv_bench.py  custom_bench.py  linear_bench.py  mlp_bench.py  norm_bench.py  user_preset_example.py
src/kohakubench/: __init__.py  cli.py  core.py  metrics.py  modules.py  report.py
src/kohakubench/presets/: __init__.py  attention.py  convolution.py  mlp.py  norms.py  stable_diffusion.py  transformer.py
tests/: test_kobench_core.py  test_presets.py  test_report.py
