[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kohaku-bench"
version = "0.0.1"
description = "A benchmarking tool designed for pytorch workload"
authors = [
    { name = "Shih-Ying Yeh(KohakuBlueLeaf)", email = "apolloyeh0123@gmail.com" },
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
]
urls = { "Homepage" = "https://github.com/KohakuBlueleaf/KohakuBench" }

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "black>=25.0.0",
]

[project.scripts]
kobench = "kohakubench.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

